<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/left"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:background="@color/white"
        android:text="@string/right" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/value"
        android:layout_below="@+id/seekBar1" >
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="32dp"
        android:text="@string/sys"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/right"
        android:layout_alignTop="@+id/textView1"
        android:gravity="center_horizontal"
        android:text="@string/val"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/systemval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/value"
        android:gravity="center_horizontal"
        android:text="@string/val"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/left"
        android:layout_centerVertical="true"
        android:text="@string/set"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radio0"
        android:layout_alignBottom="@+id/radio0"
        android:layout_alignRight="@+id/right"
        android:text="@string/remote"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <RadioButton
        android:id="@+id/radio0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="42dp"
        android:checked="true"
        android:minHeight="22dp"
        android:text="@string/local"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/left"
        style="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBar1"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="26dp"
        android:background="@color/white"
        android:text="@string/left" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/right"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:progress="@integer/progress" />

</RelativeLayout>